claudedocs/phase1-dnd-quest-experiment/v1/run/manuscripts/world-claim.md
=== playthrough manuscript — 121 fact(s), 1 world(s) ===
world `claim`: 32 scene(s), undeclared adjacencies=0, unplaced=0, undecidable=0, outside order=20
  sc-01 — Karrow's Reach above the drowned hold [begins=4 ends=0 holding=4]
    + f-001 (gt) [state]: Karrow's Reach clings to the lip of Vael Mooren, a drowned dwarrow undercity that sank a lifetime ago when its cisterns burst
    + f-002 (gt) [state]: For a season the drowned dead have risen from the floodwater and walked the lower tunnels, and three hired delvers have already vanished
    + f-003 (gt) [state]: The rising is driven by the Hollow Crown, the relic of the hold's last warden, whose drowned shade keeps the deep vault
    + f-004 (gt) [withhold first_at=sc-14]: The crown is no curse blown in from outside — the town's own shrine-keeper has secretly fed corpse-tithes into the floodwater to wake the warden
  sc-02 — The reeve's hall — the party is hired [begins=5 ends=0 holding=9]
    + f-010 (gt) [state]: At his hall the reeve hires the party of four to go down into Vael Mooren, find what wakes the dead, and end it
    + f-011 (reeve) [state]: Reeve Calder believes the rising is a curse out of the deep hold and that ending it means reaching whatever wakes the dead and destroying it
    + f-012 (gt) [state via sc-02/reeve-hall]: The reeve opens the main charge on the party — still the rising — a thread the adventure has promised to pay off
    + f-013 (gt) [state]: The party takes on the reeve's charge to end the rising as their main quest
    + f-014 (fighter) [state]: Doran takes the reeve's coin and reads the job plainly: get down, find the thing, put it down, get the party out alive
  sc-03 — The dead walk the lower tunnels [begins=3 ends=0 holding=12]
    + f-020 (gt) [state]: Townsfolk report drowned dead walking the lower tunnels by night and the floodwater creeping higher up the stairs
    + f-021 (cleric) [state]: Mother Henna senses the dead are not merely restless but held — leashed to something deep below, not wandering free
    + f-022 (fighter) [state]: Doran sizes up the tunnel-mouths and the footing, marking where a fight or a fall would come
  sc-04 — The shrine — the keeper offers help [begins=3 ends=0 holding=15]
    + f-030 (gt) [state]: At the shrine Brother Vane greets the party warmly, offering blessings, lore of the hold, and the run of his shrine
    + f-031 (shrinekeeper) [state]: Brother Vane plays the helpful ally to the party while concealing that he himself wakes the warden, meaning to raise the hold's wealth and rule the Reach
    + f-032 (cleric) [state]: Mother Henna takes Brother Vane for a brother of the cloth and a friend, sensing nothing false in his welcome
  sc-05 — The lantern-house — the boy's missing master [begins=4 ends=0 holding=19]
    + f-040 (gt) [state]: At the lantern-house the boy Tam tells the party his master was the last delver to go down and never came back up
    + f-041 (gt) [state via sc-05/lantern-house]: Tam begs the party to find his master and bring word back — opening the errand of the last delver
    + f-042 (gt) [state]: The rogue takes on the lantern-boy's errand to find the last delver and bring word back
    + f-043 (lanternboy) [state]: Tam believes his master is only lost in the dark below and may yet be found alive, and trusts the party to bring him word
  sc-06 — The wise-woman and the first tithe [begins=3 ends=0 holding=22]
    + f-050 (gt) [state]: Old Maeve the wise-woman keeps the lore of the cisterns and tells of a first corpse-tithe given to the floodwater long ago
    + f-051 (wisewoman) [state]: Old Maeve knows the rising answers a tithe of the dead given to the water, and warns the party that someone living must be feeding it again
    + f-052 (rogue) [state]: Pip lingers behind the others at Maeve's door and overhears her mutter that the new tithe smells of incense — shrine-work
  sc-07 — The reliquary errand — bring me the crown [begins=3 ends=0 holding=25]
    + f-060 (gt) [state via sc-07/shrine]: Brother Vane asks the party to bring him the crown when they find it, so he may seal it safely in his reliquary — opening the reliquary errand
    + f-061 (gt) [state]: The cleric, trusting the shrine-keeper, takes on the errand to bring him the crown to be sealed
    + f-062 (shrinekeeper) [state]: Brother Vane's reliquary errand is a misdirection — handing him the crown would hand him its power, the thing he has schemed for all along
  sc-08 — Down into the upper galleries [begins=1 ends=0 holding=26]
    + f-070 (gt) [state]: The party descends into the upper galleries of the hold, the floodwater rising about their knees
  sc-09 — First of the drowned dead [begins=3 ends=0 holding=29]
    + f-080 (gt) [state]: The first of the drowned dead rise from a flooded gallery and come at the party
    + f-081 (fighter) [state]: Doran reads the drowned dead as slow but tireless, and holds the narrow ground where only two can come at once
    + f-082 (cleric) [state]: Mother Henna feels every drowned corpse pull toward the deep when it falls, as if reeled in on one line
  sc-10 — The rogue finds the flooded stair [begins=2 ends=0 holding=31]
    + f-090 (gt) [state]: Past the gallery the rogue finds a flooded stair hidden behind a fall of rubble, the secret way deeper into the hold
    + f-091 (rogue) [state]: Pip alone marks the flooded stair and the dropped tools on it, reading that someone living went down this hidden way before them
  sc-11 — The rival sellsword in the dark [begins=3 ends=0 holding=34]
    + f-100 (gt) [state]: In the dark the party meets Skell, a rival sellsword who got down first and means to have the crown's worth for himself
    + f-101 (rival) [withhold first_at=sc-26c]: Skell sees the party as latecomers to his prize and will work beside them only until the crown is in reach
    + f-102 (fighter) [state]: Doran reads Skell as a fighting man who will turn the moment the gold is on the table, and keeps him in front where he can watch him
  sc-12 — The cleric reads the dead's leash [begins=2 ends=0 holding=36]
    + f-110 (gt) [state]: Deeper down the cleric reads the leash plainly — every walking corpse is bound to one will seated in the deep vault
    + f-111 (cleric) [state]: Mother Henna knows now that the dead are held by a single warden-will below, and that such a will might be spoken to, not only fought
  sc-13 — The last delver's body and journal [begins=2 ends=0 holding=38]
    + f-120 (gt) [state]: In a side-cell the party finds the body of the last delver, half in the floodwater, with his journal still on him
    + f-121 (rogue) [state]: Pip recovers the journal from the drowned delver's body, the proof Tam's master is dead and the record of what he learned
  sc-14 — The journal names the corpse-tithe [begins=3 ends=0 holding=41]
    + f-130 (gt) [state]: The delver's journal records that he tracked the corpse-tithes to their source and found the shrine-keeper feeding the dead to the water
    + f-131 (gt) [state]: Reading the journal, the party learns the shrine-keeper is the living hand behind the rising — the buried cause, now surfaced
    + f-132 (wizard) [state]: Lysa matches the journal's account to Maeve's tithe-lore and is certain Brother Vane, not any curse, woke the warden
  sc-15 — The wizard finds the warden's record [begins=2 ends=0 holding=43]
    + f-140 (gt) [state]: The wizard finds the warden's record graven in dwarrow runes on the cell wall and begins to read it
    + f-141 (wizard) [state]: Lysa alone can read the dwarrow runes, and from the record learns the warden's name was Orrek and that he was no monster but a man bound to his duty
  sc-16 — The locked vault door [begins=4 ends=0 holding=47]
    + f-150 (gt) [state]: The party reaches the deep vault door, sealed fast, and learns no force will open it
    + f-151 (gt) [state via sc-16/vault-door]: At the locked vault door the party learns only the warden's own key will open it — opening the errand of the key
    + f-152 (gt) [state]: The rogue takes on recovering the warden's key, the one way past the sealed door
    + f-153 (gt) [state]: The deep vault cannot be opened and the crown cannot be reached until the warden's key is recovered
  sc-17 — The warden's cell and the drowned key [begins=4 ends=0 holding=51]
    + f-160 (gt) [state]: In the drowned warden's cell, off the flooded stair, the key lies in the silt where Orrek fell a lifetime ago
    + f-161 (gt) [state]: The rogue lifts the warden's key from the drowned cell, recovering it for the party and discharging the key errand
    + f-162 (gt) [state]: With the key recovered the party holds the warden's key — the one relic that admits them to the deep vault
    + f-163 (rogue) [state]: Pip pockets the warden's key, knowing it is the only thing standing between the party and the deep vault
  sc-18 — The crown's true nature, read in runes [begins=4 ends=0 holding=55]
    + f-170 (gt) [state]: With the warden's record read, the wizard understands the crown's true nature: it holds the warden's shade as much as it holds the dead, and it can be unmade, claimed, or left to him
    + f-171 (gt) [withhold first_at=sc-18]: The wizard learns the warden's shade can be reasoned with — Orrek keeps the crown under duty, not malice, and would hear a fair oath
    + f-172 (wizard) [state]: Lysa alone knows the crown can be shattered by the unmaking she has read, and tells the party the three roads the relic allows
    + f-173 (cleric) [state]: Hearing the wizard, Mother Henna understands she could speak an oath to Orrek's shade and bind the dead without breaking the crown
  sc-19 — The key turns — the vault opens [begins=2 ends=0 holding=57]
    + f-180 (gt) [state]: The party turns the recovered key in the deep vault door and the seal of a lifetime gives way
    + f-181 (fighter) [state]: Doran sets his shoulder to the vault door as the key turns and it grinds open onto the dark water beyond
  sc-20 — The deep vault and the warden's shade [begins=4 ends=0 holding=61]
    + f-190 (gt) [state]: In the deep vault the warden's shade rises from the black water, the Hollow Crown upon his drowned brow, the dead of the hold ranked behind him
    + f-191 (gt) [state]: The warden holds the Hollow Crown in the deep vault, the relic seated on his shade
    + f-192 (warden) [state]: Orrek's shade knows the crown binds him to keep the hold's dead and that only its unmaking, its claiming, or a sworn oath will release the burden either way
    + f-193 (cleric) [state]: Mother Henna meets the warden's shade and feels at once that he is weary, not wrathful — a keeper worn past the end of his duty
  sc-21 — The crown between them — the choice [begins=2 ends=0 holding=63]
    + f-200 (gt) [state]: Before the warden the party faces the crown and the three roads the wizard named: shatter it, claim it, or parley with the shade
    + f-201 (rival) [state]: Skell, come this far at the party's heels, fixes on the crown and means to have its worth whichever road the party takes
  sc-22 — The fork at the deep vault [begins=1 ends=0 holding=64]
    + f-210 (gt) [state]: At the deep vault the party makes the one choice the delve turns on — shatter, claim, or parley
  sc-23c — CLAIM — the party takes the crown's power [begins=2 ends=1 holding=65]
    + f-400 (gt) [state]: The party takes the Hollow Crown from the warden's shade and seizes its power for themselves
    + f-401 (gt) [state]: The crown passes from the warden to the party, who now hold the Hollow Crown
    - f-191 (gt): superseded by f-401
  sc-24c — The warden bound under a new will [begins=1 ends=0 holding=66]
    + f-402 (warden) [state]: Orrek's shade, the crown wrested from him, is bound under the party's will now in place of his own duty, neither freed nor at rest
  sc-25c — The dead made to obey the crown's holder [begins=2 ends=0 holding=68]
    + f-403 (gt) [state]: With the crown on a living brow the dead no longer rise wild but bend to the crown's holder, made to obey
    + f-404 (gt) [state]: The party has ended the wild rising by mastering it — the dead obey the crown's holder, discharging the reeve's charge in a dark coin
  sc-26c — The rival kneels or is broken [begins=2 ends=0 holding=70]
    + f-405 (gt) [state]: Skell, faced with a party that commands the dead, kneels to the crown's holder rather than be broken by the corpses he came to rob
    + f-406 (rival) [state]: Skell, no fool, throws in with the crown's holder, reckoning a share under a new power is better than a grave among the dead
  sc-27c — The climb up with the Hollow Crown [begins=1 ends=0 holding=71]
    + f-407 (gt) [state]: The party climbs up out of the hold bearing the Hollow Crown and the dead that come at its call
  sc-28c — The shrine-keeper's reliquary, hand it over [begins=3 ends=1 holding=73]
    + f-408 (gt) [state]: At the shrine the party, holding the crown, can at last fulfil Brother Vane's errand and hand it over to be sealed
    + f-409 (gt) [state]: The party hands the Hollow Crown to Brother Vane, fulfilling the reliquary errand
    + f-410 (gt) [state]: The crown passes from the party to Brother Vane, who now holds the Hollow Crown he schemed for all along
    - f-401 (gt): superseded by f-410
  sc-29c — The shrine-keeper's betrayal at the shrine [begins=2 ends=0 holding=75]
    + f-411 (gt) [state]: With the crown in his hands Brother Vane betrays the party, turning the obedient dead against them and seizing the power for himself
    + f-412 (shrinekeeper) [state]: Brother Vane, the crown at last in his grasp, throws off the helpful brother and means to rule the Reach by the dead it commands
  sc-30c — The crown changes hands — who rules the Reach [begins=2 ends=0 holding=77]
    + f-413 (gt) [state]: By the end of the road the Hollow Crown rules the Reach — whether on the party's brow or, betrayed, on Brother Vane's, the living are held by the dead
    + f-414 (reeve) [state]: Reeve Calder finds his authority hollow — the Reach now answers to whoever wears the crown, and his hall holds no power over the dead
  sc-31c — The wise-woman and the boy under a new master [begins=2 ends=0 holding=79]
    + f-415 (wisewoman) [state]: Old Maeve names the dark bargain: the rising is mastered, not ended, and the Reach has only changed which hand the dead obey
    + f-416 (lanternboy) [state]: Tam, his master never spoken of and the party turned rulers, is left under the crown's shadow with no word of the dead delver and no one to ask
  sc-32c — CLAIM ending — a crowned Reach, and the cost [begins=1 ends=0 holding=80]
    + f-417 (gt) [state]: The Reach ends under the Hollow Crown: the dead commanded, the wise-woman grim, the reeve hollow, and the lantern-boy never told what became of his master
